--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Description: Plots exons from two genes as boxes scaled by exon size and
 License: GPL-3
 LazyData: TRUE
 Imports:
+    tools,
     GenomicRanges,
     RColorBrewer
 Suggests: knitr
