Add sorDataIntoBins documentation and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(genomicToModelCoordinates)
 export(grFromCohortDf)
 export(loadGafModels)
 export(loadGeneModels)
+export(sortDataIntoBins)
 import(GenomicRanges)
 import(IRanges)
 import(RColorBrewer)
