Add comments, refactor adding grNew, add failing tests for commented code, test grNew, and start plot vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(extractTranscriptModels)
 export(genomicToModelCoordinates)
 export(grAddColumn)
 export(grFromCohortDf)
+export(grLabelMap)
+export(grNew)
+export(grToRect)
 export(loadGafModels)
 export(loadGeneModels)
 export(sortDataIntoBins)
