Added string util regexprNamedMatches for named matching.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ export(extractTranscriptModels)
 export(genomicToModelCoordinates)
 export(grAddColumn)
 export(grFromCohortDf)
+export(grFromElementString)
 export(grLabelMap)
 export(grNew)
 export(grToRect)
 export(loadGafModels)
 export(loadGeneModels)
+export(regexprNamedMatches)
 export(sortDataIntoBins)
 import(GenomicRanges)
 import(IRanges)
