Refactor out mapColors from grUtils into dataRangeReduction, and work on gr from string functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,14 @@ export(genomicToModelCoordinates)
 export(grAddColumn)
 export(grFromCohortDf)
 export(grFromElementString)
-export(grLabelMap)
+export(grFromLocationString)
 export(grNew)
 export(grToRect)
 export(loadGafModels)
 export(loadGeneModels)
+export(mapColors)
+export(mapLabels)
 export(regexprNamedMatches)
-export(sortDataIntoBins)
 import(GenomicRanges)
 import(IRanges)
 import(RColorBrewer)
