Adding implementation and documentation for grToElementString()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(grFromCohortDf)
 export(grFromElementString)
 export(grFromLocationString)
 export(grNew)
+export(grToElementString)
 export(grToRect)
 export(loadGafModels)
 export(loadGeneModels)
