Implement grToLocationString() and the StringUtils::templateFill() function it uses.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,14 @@ export(grFromElementString)
 export(grFromLocationString)
 export(grNew)
 export(grToElementString)
+export(grToLocationString)
 export(grToRect)
 export(loadGafModels)
 export(loadGeneModels)
 export(mapColors)
 export(mapLabels)
 export(regexprNamedMatches)
+export(templateFill)
 import(GenomicRanges)
 import(IRanges)
 import(RColorBrewer)
