--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: FusionExressionPlot
+Package: FusionExpressionPlot
 Type: Package
 Title: Plot Expression Profiles for Fused Genes
 Version: 0.1
 Date: 2015-06-22
-Authors@R: 
+Authors@R:
    c(
       person( "Stuart R", "Jefferys",
               email= "srjefferys@gmail.com",
@@ -24,7 +24,7 @@ Description: Plots exons from two genes as boxes scaled by exon size and
    of similar samples.
 License: GPL-3
 LazyData: TRUE
-Imports: 
+Imports:
     tools,
     IRanges,
     GenomicRanges,
