--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(grNew)
 export(grToElementString)
 export(grToLocationString)
 export(grToRect)
+export(is.safeFileName)
 export(loadGafModels)
 export(loadGeneModels)
 export(mapColors)
