Added slurp() to read in file as array of strings.
Tested, 100% coverage, documented, checked.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(loadGafModels)
 export(mapColors)
 export(mapLabels)
 export(regexprNamedMatches)
+export(slurp)
 export(templateFill)
 import(GenomicRanges)
 import(IRanges)
