Added loadCohortDefinition(), no testing.
Documentation pretty good.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(grToElementString)
 export(grToLocationString)
 export(grToRect)
 export(is.safeFileName)
+export(loadCohortDefinition)
 export(loadGafModels)
 export(mapColors)
 export(mapLabels)
