Fix bug with reversed colors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(loadGafModels)
 export(mapColors)
 export(mapLabels)
 export(normExpressionData)
+export(plotFusionExpressionOne)
+export(plotFusionExpressionPair)
 export(plotGeneExpression)
 export(regexprNamedMatches)
 export(slurp)
