Document and export plot functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(filterFusions)
 export(genomicToModelCoordinates)
 export(getCandidateFusions)
 export(getCohortExonExpressionData)
+export(getFusionExpressionPlotData)
 export(getMapSpliceCohortFusionData)
 export(grAddColumn)
 export(grFromCohortDf)
@@ -27,7 +28,9 @@ export(mapLabels)
 export(normExpressionData)
 export(plotFusionExpressionOne)
 export(plotFusionExpressionPair)
+export(plotFusionExpressionPlotData)
 export(plotGeneExpression)
+export(pointToPoly)
 export(regexprNamedMatches)
 export(slurp)
 export(templateFill)
