--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,3 +34,6 @@ export(pointToPoly)
 export(regexprNamedMatches)
 export(slurp)
 export(templateFill)
+import(GenomicRanges)
+import(IRanges)
+import(RColorBrewer)
